--- a/app/src/main/res/layout/fragment_select_bank.xml
+++ b/app/src/main/res/layout/fragment_select_bank.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:visibility="visible"
-    tools:context=".selectBankFragment">
+    tools:context=".SelectBankFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
