--- a/app/src/main/res/layout/fragment_upi_pin.xml
+++ b/app/src/main/res/layout/fragment_upi_pin.xml
@@ -34,7 +34,7 @@
         >
 
         <EditText
-            android:id="@+id/pin1"
+            android:id="@+id/otpCode1"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="60dp"
@@ -50,7 +50,7 @@
             android:layout_marginStart="30dp"/>
 
         <EditText
-            android:id="@+id/pin2"
+            android:id="@+id/otpCode2"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="60dp"
