--- a/app/src/main/res/layout/activity_splash_repay.xml
+++ b/app/src/main/res/layout/activity_splash_repay.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".splashREPay">
+    tools:context=".SplashREPay">
 
     <ImageView
         android:id="@+id/imageView"
