--- a/app/src/main/res/layout/activity_vouchers_cardview.xml
+++ b/app/src/main/res/layout/activity_vouchers_cardview.xml
@@ -4,44 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".vouchers_cardview"
+    tools:context=".VoucherCardview"
     android:background="@color/black">
-
-    <TextView
-        android:id="@+id/tv_rePay"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="RE-Pay"
-        android:fontFamily="@font/intersemibold"
-        android:textSize="@dimen/_20ssp"
-        android:gravity="center"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/cv_my_vouchers"
-        android:layout_marginTop="@dimen/_20sdp"/>
-
-    <ImageView
-        android:layout_width="@dimen/_20sdp"
-        android:layout_height="@dimen/_20sdp"
-        android:src="@drawable/settings"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginEnd="@dimen/_20sdp"
-        android:layout_marginTop="28dp" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cv_my_vouchers"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_marginStart="@dimen/_20sdp"
-        android:layout_marginTop="@dimen/_20sdp"
         android:layout_marginEnd="@dimen/_20sdp"
-        android:layout_marginBottom="@dimen/_20sdp"
         app:cardElevation="10dp"
         app:cardPreventCornerOverlap="true"
-        app:layout_constraintTop_toBottomOf="@id/tv_rePay"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toTopOf="parent">
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl1"
             android:layout_width="match_parent"
@@ -53,11 +30,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@drawable/maskgroup"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/voucher_img"
@@ -65,79 +41,79 @@
                 android:layout_height="70dp"
                 android:layout_marginEnd="@dimen/_20sdp"
                 android:src="@drawable/mdi_voucher_outline"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <ImageView
                 android:layout_width="60dp"
                 android:layout_height="60dp"
+                android:layout_marginEnd="13dp"
+                android:layout_marginBottom="-32dp"
                 android:src="@drawable/maskgroup2"
                 app:layout_constraintBottom_toTopOf="@id/voucher_img"
                 app:layout_constraintEnd_toEndOf="@id/voucher_img"
-                app:layout_constraintStart_toStartOf="@id/voucher_img"
-                android:layout_marginBottom="-32dp"
-                android:layout_marginEnd="13dp"
-                />
+                app:layout_constraintStart_toStartOf="@id/voucher_img" />
 
             <TextView
                 android:id="@+id/my_vouchers"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="30dp"
+                android:fontFamily="@font/montserratbold"
                 android:text="@string/my_vouchers"
-                android:fontFamily="@font/intersemibold"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_15ssp"
-                app:layout_constraintTop_toTopOf="@id/cl1"
                 app:layout_constraintStart_toStartOf="@+id/cl1"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="30dp"/>
-<androidx.appcompat.widget.LinearLayoutCompat
-    android:id="@+id/valid_vouchers_linear_layout"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    app:layout_constraintStart_toStartOf="@+id/my_vouchers"
-    app:layout_constraintTop_toBottomOf="@+id/my_vouchers">
+                app:layout_constraintTop_toTopOf="@id/cl1" />
 
-    <TextView
-        android:id="@+id/available_vouchers_number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="2 "
-        android:fontFamily="@font/intermedium"
-        android:textColor="#78BA64"
-        android:textSize="@dimen/_12ssp"
-        app:layout_constraintTop_toBottomOf="@id/my_vouchers"
-        app:layout_constraintStart_toStartOf="@+id/cl1"
-        android:layout_marginTop="10dp"/>
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:id="@+id/valid_vouchers_linear_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@+id/my_vouchers"
+                app:layout_constraintTop_toBottomOf="@+id/my_vouchers">
 
-    <TextView
-        android:id="@+id/available_vouchers"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="Valid vouchers available"
-        android:fontFamily="@font/intermedium"
-        android:textColor="#78BA64"
-        android:textSize="@dimen/_12ssp"
-        app:layout_constraintTop_toBottomOf="@id/my_vouchers"
-        app:layout_constraintStart_toStartOf="@+id/cl1"
-        android:layout_marginTop="10dp"/>
-</androidx.appcompat.widget.LinearLayoutCompat>
+                <TextView
+                    android:id="@+id/available_vouchers_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:fontFamily="@font/montserratregular"
+                    android:textColor="@color/green"
+                    android:textSize="@dimen/_12ssp"
+                    app:layout_constraintStart_toStartOf="@+id/cl1"
+                    app:layout_constraintTop_toBottomOf="@id/my_vouchers"
+                    tools:text="2 " />
+
+                <TextView
+                    android:id="@+id/available_vouchers"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:fontFamily="@font/montserratregular"
+                    android:textColor="@color/green"
+                    android:textSize="@dimen/_12ssp"
+                    app:layout_constraintStart_toStartOf="@+id/cl1"
+                    app:layout_constraintTop_toBottomOf="@id/my_vouchers"
+                    android:text="Valid vouchers available" />
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
             <ImageView
                 android:id="@+id/rectangle"
                 android:layout_width="200dp"
                 android:layout_height="50dp"
-                app:layout_constraintTop_toBottomOf="@+id/valid_vouchers_linear_layout"
-                app:layout_constraintStart_toStartOf="@+id/valid_vouchers_linear_layout"
-                android:src="@drawable/rectangle"
                 android:layout_marginTop="30dp"
-                />
+                android:src="@drawable/rectangle"
+                app:layout_constraintStart_toStartOf="@+id/valid_vouchers_linear_layout"
+                app:layout_constraintTop_toBottomOf="@+id/valid_vouchers_linear_layout" />
 
             <TextView
                 android:id="@+id/add_voucher"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/intersemibold"
+                android:fontFamily="@font/montserratbold"
                 android:text="@string/add_voucher"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_12ssp"
@@ -145,7 +121,7 @@
                 app:layout_constraintEnd_toEndOf="@id/rectangle"
                 app:layout_constraintHorizontal_bias="0.538"
                 app:layout_constraintStart_toStartOf="@id/rectangle"
-                app:layout_constraintTop_toTopOf="@id/rectangle"/>
+                app:layout_constraintTop_toTopOf="@id/rectangle" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -180,15 +156,14 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                />
+                app:layout_constraintEnd_toEndOf="parent" />
 
             <ImageView
                 android:id="@+id/rs_surround"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_marginEnd="20dp"
-                android:src="@drawable/vector"
+                android:src="@drawable/refresh"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -207,7 +182,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/transaction_nhistory"
-                android:fontFamily="@font/intersemibold"
+                android:fontFamily="@font/montserratbold"
                 android:textColor="@color/white"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
