--- a/app/src/main/res/layout/dialog_alert_layout.xml
+++ b/app/src/main/res/layout/dialog_alert_layout.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="250dp"
-    android:background="@color/black"
+    android:background="@drawable/dialog_bg"
     android:orientation="vertical">
 
     <ImageView
@@ -34,13 +34,17 @@
         android:id="@+id/dialog_ok"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/btn_button"
-        android:text="@string/ok"
-        android:fontFamily="@font/montserratregular"
-        android:textColor="@color/white"
         android:layout_marginTop="40dp"
+        android:layout_marginBottom="@dimen/_20sdp"
+        android:background="@drawable/btn_button"
+        android:fontFamily="@font/montserratregular"
+        android:text="@string/ok"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
