--- a/app/src/main/res/layout/fragment_enter_amount.xml
+++ b/app/src/main/res/layout/fragment_enter_amount.xml
@@ -21,50 +21,52 @@
         android:textColor="@color/white"
         android:textSize="20sp" />
 
-    <ImageView
-        android:id="@+id/imageView"
+    <LinearLayout
+        android:id="@+id/get_amount"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:src="@drawable/rectangle"
-        app:layout_constraintTop_toBottomOf="@+id/tv_select_enter_amount"
-        tools:layout_editor_absoluteX="20dp" />
-
-    <EditText
-        android:id="@+id/editText1"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_select_enter_amount"
-        android:textSize="20sp"
-        android:background="@null"
-        android:fontFamily="@font/interregular"
-        android:textColor="@color/white" />
-
-    <TextView
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@+id/editText1"
-        app:layout_constraintTop_toTopOf="@+id/editText1"
-        app:layout_constraintBottom_toBottomOf="@id/editText1"
-        android:text="@string/rs_symbol"
-        android:textSize="30sp"
-        android:layout_marginStart="15dp"
-        />
+        android:background="@drawable/edittext_bg"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="10dp"
+        android:padding="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_select_enter_amount">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:fontFamily="@font/interregular"
+            android:text="@string/rs_symbol"
+            android:textColor="@color/desc"
+            android:textSize="30sp" />
+
+        <EditText
+            android:id="@+id/editTextField_phonenumber"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:fontFamily="@font/interregular"
+            android:inputType="number"
+            android:lines="1"
+            android:maxLength="4"
+            android:background="@null"
+            android:textColor="@color/white"
+            android:textSize="30sp" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/tv2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/editText1"
+        app:layout_constraintTop_toBottomOf="@+id/get_amount"
         android:text="@string/enter_amount"
         android:textColor="@color/white"
-        android:textSize="12sp"
-        app:layout_constraintStart_toStartOf="@+id/editText1"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="@id/get_amount"
         android:layout_marginTop="10dp" />
 
     <LinearLayout
