--- a/app/src/main/res/layout/fragment_my_voucher.xml
+++ b/app/src/main/res/layout/fragment_my_voucher.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".myVoucherFragment">
+    tools:context=".MyVoucherFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewMyVoucher"
