--- a/app/src/main/res/layout/fragment_my_voucher_qr_display.xml
+++ b/app/src/main/res/layout/fragment_my_voucher_qr_display.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/black"
     android:orientation="vertical"
-    tools:context=".myVoucherQrDisplay">
+    tools:context=".MyVoucherQrDisplay">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
