--- a/app/src/main/res/layout/fragment_payment_failed.xml
+++ b/app/src/main/res/layout/fragment_payment_failed.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#272727"
+    android:background="@drawable/dialog_bg"
     tools:context=".PaymentFailedFragment">
 
 
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:fontFamily="@font/interregular"
+        android:fontFamily="@font/montserratbold"
         android:text="@string/payment_failed"
         android:textColor="@color/white"
         android:textSize="20sp"
@@ -57,7 +57,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:fontFamily="@font/interbold"
+            android:fontFamily="@font/montserratbold"
             android:text="@string/rs_1000"
             android:textColor="@color/white"
             android:textSize="30sp"
@@ -79,7 +79,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:fontFamily="@font/interregular"
+            android:fontFamily="@font/montserratregular"
             android:text="@string/order_id_desc"
             android:textColor="@color/white"
             android:textSize="15sp"
@@ -92,7 +92,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:fontFamily="@font/interregular"
+            android:fontFamily="@font/montserratregular"
             android:text="@string/order_id_num"
             android:textColor="@color/white"
             android:textSize="15sp"
@@ -106,7 +106,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:fontFamily="@font/interregular"
+        android:fontFamily="@font/montserratregular"
         android:gravity="center"
         android:text="@string/try_again_later"
         android:textColor="#A7A7A7"
@@ -120,7 +120,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:fontFamily="@font/intersemibold"
+        android:fontFamily="@font/montserratregular"
         android:gravity="center"
         android:text="@string/need_help"
         android:textColor="#A7A7A7"
@@ -134,7 +134,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:fontFamily="@font/interregular"
+        android:fontFamily="@font/montserratregular"
         android:gravity="center"
         android:text="@string/further_assistance"
         android:textColor="#A7A7A7"
@@ -148,7 +148,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:fontFamily="@font/interregular"
+        android:fontFamily="@font/montserratregular"
         android:gravity="center"
         android:text="@string/help_number"
         android:textColor="#90271F"
@@ -161,11 +161,11 @@
         android:id="@+id/doneBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="@dimen/_20sdp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="@dimen/_20sdp"
         android:background="@drawable/red_button"
-        android:fontFamily="@font/intersemibold"
+        android:fontFamily="@font/montserratbold"
         android:gravity="center"
         android:text="@string/done"
         android:textColor="@color/white"
@@ -178,18 +178,21 @@
         android:id="@+id/navigateBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="@dimen/_20sdp"
         android:layout_marginTop="15dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="@dimen/_20sdp"
+        android:layout_marginBottom="@dimen/_20sdp"
         android:background="@drawable/rectangle"
-        android:fontFamily="@font/intersemibold"
+        android:fontFamily="@font/montserratbold"
         android:gravity="center"
         android:text="@string/nearby_fuel_station"
         android:textColor="@color/white"
         android:textSize="13sp"
         app:cornerRadius="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/doneBtn" />
+        app:layout_constraintTop_toBottomOf="@+id/doneBtn"
+        app:layout_constraintVertical_bias="0.01" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
