--- a/app/src/main/res/layout/fragment_transaction_history.xml
+++ b/app/src/main/res/layout/fragment_transaction_history.xml
@@ -6,6 +6,7 @@
     tools:context=".transactionHistoryFragment">
 
    <androidx.recyclerview.widget.RecyclerView
+       android:id="@+id/rv_transaction_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/transaction_history_items"/>
