--- a/app/src/main/res/layout/fragment_account_settings.xml
+++ b/app/src/main/res/layout/fragment_account_settings.xml
@@ -11,123 +11,102 @@
         android:id="@+id/tv_registered_mob_num"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Registered Mobile no."
-        android:textColor="#A2A2A2"
-        android:textSize="15sp"
+        android:text="@string/registered_mobile_no"
+        android:textColor="@color/desc"
+        android:textSize="@dimen/_15ssp"
         android:fontFamily="@font/interregular"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginStart="@dimen/_16sdp"
+        android:layout_marginTop="@dimen/_20sdp"/>
 
     <TextView
         android:id="@+id/tv_mobile_num"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="30dp"
-        app:layout_constraintStart_toStartOf="@+id/et_rectangle_mobile_num"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/_40sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_20sdp"
+        app:layout_constraintStart_toStartOf="@+id/tv_registered_mob_num"
         app:layout_constraintTop_toBottomOf="@+id/tv_registered_mob_num"
-        app:layout_constraintBottom_toBottomOf="@+id/et_rectangle_mobile_num"
         android:textSize="20sp"
-        android:text="9836524424"
+        android:background="@drawable/rectangle"
+        android:text="@string/mobile_numb"
         android:fontFamily="@font/interregular"
-        android:textColor="#A2A2A2" />
-
-    <ImageView
-        android:id="@+id/et_rectangle_mobile_num"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:src="@drawable/rectangle"
-        app:layout_constraintTop_toBottomOf="@+id/tv_registered_mob_num"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="10dp"/>
+        android:textColor="@color/desc"
+        android:gravity="center"
+        android:paddingStart="@dimen/_10sdp"
+        android:paddingEnd="@dimen/_180sdp"/>
 
    <TextView
-       android:id="@+id/tv_upi"
+       android:id="@+id/tv_upi_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
-       android:text="UPI"
-       android:textColor="#A2A2A2"
-       android:textSize="15sp"
+       android:text="@string/upi_desc"
+       android:textColor="@color/desc"
+       android:textSize="@dimen/_15ssp"
        android:fontFamily="@font/interregular"
-       app:layout_constraintTop_toBottomOf="@+id/et_rectangle_mobile_num"
+       app:layout_constraintTop_toBottomOf="@+id/tv_mobile_num"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        />
+
     <TextView
-        android:id="@+id/tv_upi_number"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_upi"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_rectangle_upi"
-        app:layout_constraintStart_toStartOf="@+id/tv_rectangle_upi"
-        android:layout_marginStart="30dp"
+        android:id="@+id/tv_upi_num"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/_40sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_20sdp"
+        app:layout_constraintStart_toStartOf="@+id/tv_upi_desc"
+        app:layout_constraintTop_toBottomOf="@+id/tv_upi_desc"
         android:textSize="20sp"
-        android:text="XXXXXXXXXX@apl"
+        android:background="@drawable/rectangle"
+        android:text="@string/upi_num"
         android:fontFamily="@font/interregular"
-        android:textColor="#A2A2A2" />
-
-    <ImageView
-        android:id="@+id/tv_rectangle_upi"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:src="@drawable/rectangle"
-        app:layout_constraintTop_toBottomOf="@+id/tv_upi"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="10dp"/>
+        android:textColor="@color/desc"
+        android:gravity="center"
+        android:paddingStart="@dimen/_10sdp"
+        android:paddingEnd="@dimen/_140sdp"/>
 
     <TextView
-        android:id="@+id/tv_bank_account"
+        android:id="@+id/tv_bank_account_desc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Bank Account"
-        android:textColor="#A2A2A2"
-        android:textSize="15sp"
+        android:text="@string/bank_account_desc"
+        android:textColor="@color/desc"
+        android:textSize="@dimen/_15ssp"
         android:fontFamily="@font/interregular"
-        app:layout_constraintTop_toBottomOf="@+id/tv_upi_number"
+        app:layout_constraintTop_toBottomOf="@+id/tv_upi_num"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="20dp"
         android:layout_marginStart="20dp"
         />
-    <EditText
-        android:id="@+id/et_bank_account"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_bank_account"
-        app:layout_constraintBottom_toBottomOf="@+id/et_rectangle_bank_account"
+
+    <TextView
+        android:id="@+id/tv_bank_account_num"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/_40sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_20sdp"
+        app:layout_constraintStart_toStartOf="@+id/tv_bank_account_desc"
+        app:layout_constraintTop_toBottomOf="@+id/tv_bank_account_desc"
         android:textSize="20sp"
-        android:background="@null"
-        android:fontFamily="@font/intersemibold"
-        android:textColor="#A2A2A2" />
+        android:background="@drawable/rectangle"
+        android:text="@string/bank_account_num"
+        android:fontFamily="@font/interregular"
+        android:textColor="@color/desc"
+        android:gravity="center"
+        android:paddingStart="@dimen/_10sdp"
+        android:paddingEnd="@dimen/_168sdp"/>
 
     <ImageView
-        android:id="@+id/et_rectangle_bank_account"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:src="@drawable/rectangle"
-        app:layout_constraintTop_toBottomOf="@+id/tv_bank_account"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="10dp"/>
-
-    <ImageView
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="@dimen/_20sdp"
+        android:layout_height="@dimen/_20sdp"
+        app:layout_constraintEnd_toEndOf="@+id/tv_bank_account_num"
         android:src="@drawable/edit_button"
-        app:layout_constraintEnd_toEndOf="@+id/et_rectangle_bank_account"
-        app:layout_constraintTop_toTopOf="@+id/et_rectangle_bank_account"
-        app:layout_constraintBottom_toBottomOf="@+id/et_rectangle_bank_account"
-        android:layout_marginEnd="10dp"
-        />
+        app:layout_constraintTop_toTopOf="@id/tv_bank_account_num"
+        app:layout_constraintBottom_toBottomOf="@id/tv_bank_account_num"
+        android:layout_marginEnd="@dimen/_8sdp"
+        android:contentDescription="@string/edit_button" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
