--- a/app/src/main/res/layout/fragment_enter_amount.xml
+++ b/app/src/main/res/layout/fragment_enter_amount.xml
@@ -15,125 +15,125 @@
         android:text="@string/select_or_enter_amount"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginStart="@dimen/_20sdp"
+        android:layout_marginTop="@dimen/_30sdp"
         android:fontFamily="@font/intersemibold"
         android:textColor="@color/white"
-        android:textSize="20sp" />
+        android:textSize="@dimen/_15ssp" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/rectangle_border"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_height="@dimen/_40sdp"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:layout_marginStart="@dimen/_20sdp"
+        android:layout_marginEnd="@dimen/_20sdp"
         android:src="@drawable/rectangle"
         app:layout_constraintTop_toBottomOf="@+id/tv_select_enter_amount"
         tools:layout_editor_absoluteX="20dp" />
 
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/et_enter_amount"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="30dp"
+        android:layout_height="@dimen/_40sdp"
+        android:layout_marginLeft="@dimen/_20sdp"
+        android:layout_marginRight="@dimen/_20sdp"
+        android:layout_marginTop="@dimen/_20sdp"
         app:layout_constraintTop_toBottomOf="@+id/tv_select_enter_amount"
-        android:textSize="20sp"
+        android:textSize="@dimen/_20ssp"
         android:background="@null"
         android:fontFamily="@font/interregular"
         android:textColor="@color/white" />
 
     <TextView
+        android:id="@+id/tv_rs_symbol"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@+id/editText1"
-        app:layout_constraintTop_toTopOf="@+id/editText1"
-        app:layout_constraintBottom_toBottomOf="@id/editText1"
+        app:layout_constraintStart_toStartOf="@+id/et_enter_amount"
+        app:layout_constraintTop_toTopOf="@+id/et_enter_amount"
+        app:layout_constraintBottom_toBottomOf="@id/et_enter_amount"
         android:text="@string/rs_symbol"
-        android:textSize="30sp"
-        android:layout_marginStart="15dp"
+        android:textSize="@dimen/_20ssp"
+        android:layout_marginStart="@dimen/_10sdp"
         />
 
     <TextView
-        android:id="@+id/tv2"
+        android:id="@+id/tv_enter_amount_range"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/editText1"
+        app:layout_constraintTop_toBottomOf="@+id/et_enter_amount"
         android:text="@string/enter_amount"
         android:textColor="@color/white"
-        android:textSize="12sp"
-        app:layout_constraintStart_toStartOf="@+id/editText1"
-        android:layout_marginTop="10dp" />
+        android:textSize="@dimen/_12ssp"
+        app:layout_constraintStart_toStartOf="@+id/et_enter_amount"
+        android:layout_marginTop="@dimen/_10sdp" />
 
     <LinearLayout
         android:id="@+id/amount_options"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv2"
-        app:layout_constraintVertical_bias="0.110000014">
+        app:layout_constraintTop_toBottomOf="@+id/tv_enter_amount_range"
+        android:layout_marginTop="@dimen/_30sdp">
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/amt_100"
-            android:layout_width="65dp"
-            android:layout_height="40dp"
+            android:layout_width="@dimen/_50sdp"
+            android:layout_height="@dimen/_30sdp"
             android:layout_weight="1"
             android:background="@drawable/rectangle2"
             android:text="@string/add_rs_100"
             android:textColor="@color/white"
             android:fontFamily="@font/interregular"
             android:gravity="center"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="@dimen/_15sdp"
             app:layout_constraintHorizontal_bias="0.089"
-            app:layout_constraintStart_toStartOf="@+id/tv2"
-            app:layout_constraintTop_toBottomOf="@+id/tv2" />
+            app:layout_constraintStart_toStartOf="@+id/tv_enter_amount_range"
+            app:layout_constraintTop_toBottomOf="@+id/tv_enter_amount_range" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/amt_500"
-            android:layout_width="65dp"
-            android:layout_height="40dp"
+            android:layout_width="@dimen/_50sdp"
+            android:layout_height="@dimen/_30sdp"
             android:layout_weight="1"
             android:background="@drawable/rectangle2"
             android:text="@string/add_rs_500"
             android:textColor="@color/white"
             android:fontFamily="@font/interregular"
             android:gravity="center"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="@dimen/_15sdp"
             app:layout_constraintStart_toEndOf="@id/amt_100"
-            app:layout_constraintTop_toBottomOf="@+id/tv2" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_enter_amount_range" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/amt_1000"
-            android:layout_width="65dp"
-            android:layout_height="40dp"
+            android:layout_width="@dimen/_50sdp"
+            android:layout_height="@dimen/_30sdp"
             android:layout_weight="1"
             android:background="@drawable/rectangle2"
             android:text="@string/add_rs_1000"
             android:textColor="@color/white"
             android:fontFamily="@font/interregular"
             android:gravity="center"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="@dimen/_15sdp"
             app:layout_constraintStart_toEndOf="@id/amt_500"
-            app:layout_constraintTop_toBottomOf="@+id/tv2" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_enter_amount_range" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/amt_2000"
-            android:layout_width="65dp"
-            android:layout_height="40dp"
+            android:layout_width="@dimen/_50sdp"
+            android:layout_height="@dimen/_30sdp"
             android:layout_weight="1"
             android:background="@drawable/rectangle2"
             android:text="@string/add_rs_2000"
             android:textColor="@color/white"
             android:fontFamily="@font/interregular"
             android:gravity="center"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginLeft="@dimen/_15sdp"
+            android:layout_marginRight="@dimen/_15sdp"
             app:layout_constraintStart_toEndOf="@id/amt_1000"
-            app:layout_constraintTop_toBottomOf="@+id/tv2" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_enter_amount_range" />
     </LinearLayout>
 
     <androidx.appcompat.widget.AppCompatButton
@@ -142,16 +142,16 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="70dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginStart="@dimen/_16sdp"
+        android:layout_marginEnd="@dimen/_16sdp"
+        android:layout_marginTop="@dimen/_60sdp"
+        android:layout_marginBottom="@dimen/_40sdp"
         android:background="@drawable/red_button"
         android:fontFamily="@font/intersemibold"
         android:gravity="center"
         android:text="@string/pay_now"
         android:textColor="@color/white"
-        android:textSize="13sp"
+        android:textSize="@dimen/_10ssp"
         app:cornerRadius="0dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
