--- a/app/src/main/res/layout/fragment_payment_failed.xml
+++ b/app/src/main/res/layout/fragment_payment_failed.xml
@@ -12,7 +12,7 @@
         android:id="@+id/failed_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/_20sdp"
         android:src="@drawable/failed_img"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,11 +22,11 @@
         android:id="@+id/tv_failed_msg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="@dimen/_12sdp"
         android:fontFamily="@font/interregular"
         android:text="@string/payment_failed"
         android:textColor="@color/white"
-        android:textSize="20sp"
+        android:textSize="@dimen/_16ssp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/failed_img" />
@@ -43,11 +43,11 @@
             android:id="@+id/tv_rs_symbol"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/_10sdp"
             android:fontFamily="@font/interbold"
             android:text="@string/rs_symbol"
             android:textColor="@color/white"
-            android:textSize="30sp"
+            android:textSize="@dimen/_25ssp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_failed_msg" />
@@ -60,134 +60,132 @@
             android:fontFamily="@font/interbold"
             android:text="@string/rs_1000"
             android:textColor="@color/white"
-            android:textSize="30sp"
+            android:textSize="@dimen/_25ssp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_failed_msg" />
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/order_id_linear_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/order_id_linear_layout"
         app:layout_constraintTop_toBottomOf="@+id/amount_linear_layout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
-            android:id="@+id/order_id_desc"
+            android:id="@+id/tv_order_id_desc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/_8sdp"
             android:fontFamily="@font/interregular"
             android:text="@string/order_id_desc"
             android:textColor="@color/white"
-            android:textSize="15sp"
+            android:textSize="@dimen/_12ssp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_amount" />
 
         <TextView
-            android:id="@+id/order_id"
+            android:id="@+id/tv_order_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/_8sdp"
             android:fontFamily="@font/interregular"
             android:text="@string/order_id_num"
             android:textColor="@color/white"
-            android:textSize="15sp"
+            android:textSize="@dimen/_12ssp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_amount" />
     </LinearLayout>
 
     <TextView
-        android:id="@+id/try_again_later"
+        android:id="@+id/tv_try_again_later"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/_8sdp"
         android:fontFamily="@font/interregular"
         android:gravity="center"
         android:text="@string/try_again_later"
-        android:textColor="#A7A7A7"
-        android:textSize="12sp"
+        android:textColor="@color/desc"
+        android:textSize="@dimen/_10ssp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/order_id_linear_layout" />
 
     <TextView
-        android:id="@+id/need_help"
+        android:id="@+id/tv_need_help"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/_8sdp"
         android:fontFamily="@font/intersemibold"
         android:gravity="center"
         android:text="@string/need_help"
-        android:textColor="#A7A7A7"
-        android:textSize="12sp"
+        android:textColor="@color/desc"
+        android:textSize="@dimen/_10ssp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/try_again_later" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_try_again_later" />
 
     <TextView
-        android:id="@+id/asssistance"
+        android:id="@+id/tv_asssistance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/_8sdp"
         android:fontFamily="@font/interregular"
         android:gravity="center"
         android:text="@string/further_assistance"
-        android:textColor="#A7A7A7"
-        android:textSize="12sp"
+        android:textColor="@color/desc"
+        android:textSize="@dimen/_10ssp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/need_help" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_need_help" />
 
     <TextView
-        android:id="@+id/help_number"
+        android:id="@+id/tv_help_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/_8sdp"
         android:fontFamily="@font/interregular"
         android:gravity="center"
         android:text="@string/help_number"
         android:textColor="#90271F"
-        android:textSize="12sp"
+        android:textSize="@dimen/_10ssp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/asssistance" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_asssistance" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/doneBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginStart="@dimen/_18sdp"
+        android:layout_marginTop="@dimen/_15sdp"
+        android:layout_marginEnd="@dimen/_18sdp"
         android:background="@drawable/red_button"
         android:fontFamily="@font/intersemibold"
         android:gravity="center"
         android:text="@string/done"
         android:textColor="@color/white"
-        android:textSize="13sp"
-        app:cornerRadius="0dp"
+        android:textSize="@dimen/_12ssp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/help_number" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_help_number" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/navigateBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginStart="@dimen/_18sdp"
+        android:layout_marginTop="@dimen/_12sdp"
+        android:layout_marginEnd="@dimen/_18sdp"
         android:background="@drawable/rectangle"
         android:fontFamily="@font/intersemibold"
         android:gravity="center"
         android:text="@string/nearby_fuel_station"
         android:textColor="@color/white"
-        android:textSize="13sp"
-        app:cornerRadius="0dp"
+        android:textSize="@dimen/_10ssp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/doneBtn" />
 
