--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -7,6 +7,7 @@
     android:background="@color/black">
 
    <androidx.recyclerview.widget.RecyclerView
+       android:id="@+id/rv_account_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/settings_items"/>
