--- a/app/src/main/res/layout/fragment_upi_pin.xml
+++ b/app/src/main/res/layout/fragment_upi_pin.xml
@@ -9,7 +9,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/title_enter_upi_pin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/intersemibold"
@@ -18,26 +18,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:textColor="@color/white"
-        android:textSize="17sp"
-        android:layout_marginTop="150dp"/>
+        android:textSize="@dimen/_13ssp"
+        android:layout_marginTop="@dimen/_120sdp"/>
 
     <LinearLayout
         android:id="@+id/get_pin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="@dimen/_40sdp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title"
-
-        >
+        app:layout_constraintTop_toBottomOf="@+id/title_enter_upi_pin">
 
         <EditText
-            android:id="@+id/pin1"
+            android:id="@+id/otpCode1"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="60dp"
+            android:layout_height="@dimen/_45sdp"
             android:background="@drawable/rectangle"
             android:fontFamily="@font/interregular"
             android:textColor="@color/white"
@@ -45,16 +42,16 @@
             android:inputType="numberPassword"
             android:gravity="center"
             android:maxLength="1"
-            android:textSize="30sp"
+            android:textSize="@dimen/_25ssp"
             android:imeOptions="actionNext"
             android:layout_marginStart="30dp"/>
 
         <EditText
-            android:id="@+id/pin2"
+            android:id="@+id/otpCode2"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="60dp"
-            android:layout_marginStart="10dp"
+            android:layout_height="@dimen/_45sdp"
+            android:layout_marginStart="@dimen/_10sdp"
             android:background="@drawable/rectangle"
             android:fontFamily="@font/interregular"
             android:textColor="@color/white"
@@ -62,15 +59,15 @@
             android:inputType="numberPassword"
             android:gravity="center"
             android:maxLength="1"
-            android:textSize="30sp"
+            android:textSize="@dimen/_25ssp"
             android:nextFocusForward="@id/otpCode3"/>
 
         <EditText
             android:id="@+id/otpCode3"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="60dp"
-            android:layout_marginStart="10dp"
+            android:layout_height="@dimen/_45sdp"
+            android:layout_marginStart="@dimen/_10sdp"
             android:background="@drawable/rectangle"
             android:fontFamily="@font/interregular"
             android:textColor="@color/white"
@@ -78,15 +75,15 @@
             android:inputType="numberPassword"
             android:gravity="center"
             android:maxLength="1"
-            android:textSize="30sp"
+            android:textSize="@dimen/_25ssp"
             android:nextFocusRight="@id/otpCode4"/>
 
         <EditText
             android:id="@+id/otpCode4"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="60dp"
-            android:layout_marginStart="10dp"
+            android:layout_height="@dimen/_45sdp"
+            android:layout_marginStart="@dimen/_10sdp"
             android:background="@drawable/rectangle"
             android:fontFamily="@font/interregular"
             android:textColor="@color/white"
@@ -94,13 +91,13 @@
             android:inputType="numberPassword"
             android:gravity="center"
             android:maxLength="1"
-            android:textSize="30sp" />
+            android:textSize="@dimen/_25ssp" />
         <EditText
             android:id="@+id/otpCode5"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="60dp"
-            android:layout_marginStart="10dp"
+            android:layout_height="@dimen/_45sdp"
+            android:layout_marginStart="@dimen/_10sdp"
             android:background="@drawable/rectangle"
             android:fontFamily="@font/interregular"
             android:textColor="@color/white"
@@ -108,13 +105,13 @@
             android:inputType="numberPassword"
             android:gravity="center"
             android:maxLength="1"
-            android:textSize="30sp" />
+            android:textSize="@dimen/_25ssp" />
         <EditText
             android:id="@+id/otpCode6"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="60dp"
-            android:layout_marginStart="10dp"
+            android:layout_height="@dimen/_45sdp"
+            android:layout_marginStart="@dimen/_10sdp"
             android:background="@drawable/rectangle"
             android:fontFamily="@font/interregular"
             android:textColor="@color/white"
@@ -122,8 +119,8 @@
             android:inputType="numberPassword"
             android:gravity="center"
             android:maxLength="1"
-            android:textSize="30sp"
-            android:layout_marginEnd="30dp"/>
+            android:textSize="@dimen/_25ssp"
+            android:layout_marginEnd="@dimen/_20sdp"/>
     </LinearLayout>
 
     <androidx.appcompat.widget.AppCompatButton
@@ -132,16 +129,15 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/get_pin"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginStart="@dimen/_12sdp"
+        android:layout_marginEnd="@dimen/_12sdp"
+        android:layout_marginTop="@dimen/_60sdp"
         android:background="@drawable/red_button"
         android:fontFamily="@font/intersemibold"
         android:gravity="center"
         android:text="@string/proceed"
         android:textColor="@color/white"
-        android:textSize="13sp"
-        app:cornerRadius="0dp" />
+        android:textSize="@dimen/_10ssp"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
