--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="green">#78BA64</color>
     <color name="description">#D9D9D9</color>
     <color name="desc">#A7A7A7</color>
+    <color name="red">#F66F23</color>
 </resources>
