--- a/app/src/main/res/layout/activity_navigation_items.xml
+++ b/app/src/main/res/layout/activity_navigation_items.xml
@@ -130,6 +130,7 @@
         android:layout_marginStart="16dp"
         android:src="@drawable/save"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/linearLayout2"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.144" />
