--- a/app/src/main/res/layout/activity_selectbank_items.xml
+++ b/app/src/main/res/layout/activity_selectbank_items.xml
@@ -21,7 +21,7 @@
             android:id="@+id/imageViewItem"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/splashlogo"
+            tools:src="@drawable/splashlogo"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:fontFamily="@font/interregular"
+            android:fontFamily="@font/montserratbold"
             android:textColor="@color/white"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
