--- a/app/src/main/res/layout/fragment_my_voucher_qr_display.xml
+++ b/app/src/main/res/layout/fragment_my_voucher_qr_display.xml
@@ -160,6 +160,7 @@
         app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/downloadQr"
         android:layout_width="300dp"
         android:layout_height="40dp"
         android:layout_marginTop="24dp"
