--- a/app/src/main/res/layout/fragment_transaction_history.xml
+++ b/app/src/main/res/layout/fragment_transaction_history.xml
@@ -3,9 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".transactionHistoryFragment">
+    tools:context=".TransactionHistoryFragment">
 
    <androidx.recyclerview.widget.RecyclerView
+       android:id="@+id/transactionHistoryRecyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/transaction_history_items"/>
