--- a/app/src/main/res/layout/activity_vouchers_cardview.xml
+++ b/app/src/main/res/layout/activity_vouchers_cardview.xml
@@ -100,29 +100,18 @@
                     android:text="Valid vouchers available" />
             </androidx.appcompat.widget.LinearLayoutCompat>
 
-            <ImageView
-                android:id="@+id/rectangle"
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/add_voucher"
                 android:layout_width="200dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="30dp"
-                android:src="@drawable/rectangle"
-                app:layout_constraintStart_toStartOf="@+id/valid_vouchers_linear_layout"
-                app:layout_constraintTop_toBottomOf="@+id/valid_vouchers_linear_layout" />
-
-            <TextView
-                android:id="@+id/add_voucher"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:fontFamily="@font/montserratbold"
                 android:text="@string/add_voucher"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_12ssp"
-                app:layout_constraintBottom_toBottomOf="@id/rectangle"
-                app:layout_constraintEnd_toEndOf="@id/rectangle"
-                app:layout_constraintHorizontal_bias="0.538"
-                app:layout_constraintStart_toStartOf="@id/rectangle"
-                app:layout_constraintTop_toTopOf="@id/rectangle" />
-
+                android:background="@drawable/rectangle"
+                app:layout_constraintStart_toStartOf="@+id/valid_vouchers_linear_layout"
+                app:layout_constraintTop_toBottomOf="@+id/valid_vouchers_linear_layout" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
