--- a/app/src/main/res/layout/fragment_enter_amount.xml
+++ b/app/src/main/res/layout/fragment_enter_amount.xml
@@ -45,17 +45,18 @@
             android:textSize="30sp" />
 
         <EditText
-            android:id="@+id/editTextField_phonenumber"
+            android:id="@+id/editTextField_amount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:fontFamily="@font/interregular"
+            android:fontFamily="@font/montserratregular"
             android:inputType="number"
             android:lines="1"
             android:maxLength="4"
+            android:layout_gravity="center"
             android:background="@null"
             android:textColor="@color/white"
-            android:textSize="30sp" />
+            android:textSize="25sp" />
     </LinearLayout>
 
     <TextView
