--- a/app/src/main/res/layout/fragment_request_otp.xml
+++ b/app/src/main/res/layout/fragment_request_otp.xml
@@ -12,7 +12,7 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/interbold"
+        android:fontFamily="@font/montserratbold"
         android:text="@string/link_your_upi_account"
         android:textColor="@color/white"
         android:textSize="16sp"
@@ -23,7 +23,7 @@
         android:id="@+id/description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/interregular"
+        android:fontFamily="@font/montserratregular"
         android:text="@string/link_your_phone"
         android:textColor="@color/white"
         android:textSize="16sp"
@@ -35,7 +35,7 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/interregular"
+        android:fontFamily="@font/montserratregular"
         android:text="@string/registered_mobile_no"
         android:textColor="@color/white"
         android:textSize="12sp"
