--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -10,8 +10,8 @@
         android:id="@+id/backBtn"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginStart="10dp"
-        android:src="@drawable/back_button"
+        android:layout_marginStart="20dp"
+        tools:src="@drawable/back_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,9 +21,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/montserratbold"
-        android:text="Settings"
+        android:text="@string/settings"
         android:textColor="@color/toolbar_title"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,11 +34,10 @@
         android:id="@+id/settingsBtn"
         android:layout_width="25dp"
         android:layout_height="25dp"
-        android:src="@drawable/settings"
+        tools:src="@drawable/settings"
         app:layout_constraintBottom_toBottomOf="@+id/toolbarTitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.83"
-
         app:layout_constraintStart_toEndOf="@+id/toolbarTitle"
         app:layout_constraintTop_toTopOf="@+id/toolbarTitle" />
 
