--- a/app/src/main/res/layout/activity_selectbank_items.xml
+++ b/app/src/main/res/layout/activity_selectbank_items.xml
@@ -17,20 +17,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imageViewItem"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            tools:src="@drawable/splashlogo"
+            android:layout_marginStart="4dp"
+            android:foregroundGravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.533"
+            tools:src="@drawable/splashlogo" />
 
         <TextView
             android:id="@+id/bankTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginStart="@dimen/_20sdp"
             android:fontFamily="@font/montserratbold"
             android:textColor="@color/white"
             android:textSize="16sp"
