--- a/app/src/main/res/layout/fragment_account_settings.xml
+++ b/app/src/main/res/layout/fragment_account_settings.xml
@@ -12,122 +12,84 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Registered Mobile no."
-        android:textColor="#A2A2A2"
+        android:textColor="@color/settings"
         android:textSize="15sp"
-        android:fontFamily="@font/interregular"
+        android:fontFamily="@font/montserratbold"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"/>
 
-    <TextView
-        android:id="@+id/tv_mobile_num"
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/editText_registerNo"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="30dp"
-        app:layout_constraintStart_toStartOf="@+id/et_rectangle_mobile_num"
-        app:layout_constraintTop_toBottomOf="@+id/tv_registered_mob_num"
-        app:layout_constraintBottom_toBottomOf="@+id/et_rectangle_mobile_num"
-        android:textSize="20sp"
-        android:text="9836524424"
-        android:fontFamily="@font/interregular"
-        android:textColor="#A2A2A2" />
-
-    <ImageView
-        android:id="@+id/et_rectangle_mobile_num"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:src="@drawable/rectangle"
-        app:layout_constraintTop_toBottomOf="@+id/tv_registered_mob_num"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="10dp"/>
-
-   <TextView
-       android:id="@+id/tv_upi"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:text="UPI"
-       android:textColor="#A2A2A2"
-       android:textSize="15sp"
-       android:fontFamily="@font/interregular"
-       app:layout_constraintTop_toBottomOf="@+id/et_rectangle_mobile_num"
-       app:layout_constraintStart_toStartOf="parent"
-       android:layout_marginTop="20dp"
-       android:layout_marginStart="20dp"
-       />
-    <TextView
-        android:id="@+id/tv_upi_number"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_upi"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_rectangle_upi"
-        app:layout_constraintStart_toStartOf="@+id/tv_rectangle_upi"
-        android:layout_marginStart="30dp"
-        android:textSize="20sp"
-        android:text="XXXXXXXXXX@apl"
-        android:fontFamily="@font/interregular"
-        android:textColor="#A2A2A2" />
-
-    <ImageView
-        android:id="@+id/tv_rectangle_upi"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:src="@drawable/rectangle"
-        app:layout_constraintTop_toBottomOf="@+id/tv_upi"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="10dp"/>
+        android:layout_height="wrap_content"
+        android:background="@drawable/rectangle"
+        android:layout_margin="20dp"
+        android:padding="@dimen/_10sdp"
+        android:textSize="@dimen/_20sdp"
+        tools:text="8861778545"
+        android:textColor="@color/settings"
+        android:fontFamily="@font/montserratregular"
+        app:layout_constraintTop_toBottomOf="@id/tv_registered_mob_num"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
-        android:id="@+id/tv_bank_account"
+        android:id="@+id/tv_upi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Bank Account"
-        android:textColor="#A2A2A2"
+        android:text="@string/upi"
+        android:textColor="@color/settings"
         android:textSize="15sp"
-        android:fontFamily="@font/interregular"
-        app:layout_constraintTop_toBottomOf="@+id/tv_upi_number"
+        android:fontFamily="@font/montserratbold"
+        app:layout_constraintTop_toBottomOf="@id/editText_registerNo"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="20dp"
         android:layout_marginStart="20dp"
-        />
-    <EditText
-        android:id="@+id/et_bank_account"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_bank_account"
-        app:layout_constraintBottom_toBottomOf="@+id/et_rectangle_bank_account"
-        android:textSize="20sp"
-        android:background="@null"
-        android:fontFamily="@font/intersemibold"
-        android:textColor="#A2A2A2" />
+        android:layout_marginTop="20dp"/>
 
-    <ImageView
-        android:id="@+id/et_rectangle_bank_account"
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/editText_upi"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:src="@drawable/rectangle"
-        app:layout_constraintTop_toBottomOf="@+id/tv_bank_account"
+        android:layout_height="wrap_content"
+        android:background="@drawable/rectangle"
+        android:layout_margin="20dp"
+        android:padding="@dimen/_10sdp"
+        android:textSize="@dimen/_20sdp"
+        tools:text="XXXXXXX@apl"
+        android:textColor="@color/settings"
+        android:fontFamily="@font/montserratregular"
+        app:layout_constraintTop_toBottomOf="@id/tv_upi"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <TextView
+        android:id="@+id/tv_bankAccount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/bank_account"
+        android:textColor="@color/settings"
+        android:textSize="15sp"
+        android:fontFamily="@font/montserratbold"
+        app:layout_constraintTop_toBottomOf="@id/editText_upi"
+        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="20dp"/>
 
-    <ImageView
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:src="@drawable/edit_button"
-        app:layout_constraintEnd_toEndOf="@+id/et_rectangle_bank_account"
-        app:layout_constraintTop_toTopOf="@+id/et_rectangle_bank_account"
-        app:layout_constraintBottom_toBottomOf="@+id/et_rectangle_bank_account"
-        android:layout_marginEnd="10dp"
-        />
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/editText_bankAccount"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/rectangle"
+        android:layout_margin="20dp"
+        android:padding="@dimen/_10sdp"
+        android:textSize="@dimen/_20sdp"
+        tools:text="XXXXXX8545"
+        android:textColor="@color/white"
+        android:fontFamily="@font/montserratregular"
+        android:drawableEnd="@drawable/edit_button"
+        app:layout_constraintTop_toBottomOf="@id/tv_bankAccount"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+    </androidx.appcompat.widget.AppCompatEditText>
 </androidx.constraintlayout.widget.ConstraintLayout>
