--- a/app/src/main/res/layout/settings_items.xml
+++ b/app/src/main/res/layout/settings_items.xml
@@ -1,36 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="110dp"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/black">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/settingsItem"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_margin="@dimen/_10sdp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.64"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/settings_logo"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:src="@drawable/account_settings_icon"
-            app:layout_constraintTop_toTopOf="@+id/settings_name"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="20dp"
             app:layout_constraintBottom_toBottomOf="@+id/settings_desc"
-            />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/settings_name" />
+
         <TextView
             android:id="@+id/settings_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/montserratbold"
             android:text="Account Settings"
-            android:fontFamily="@font/interregular"
             android:textColor="@color/white"
             android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/settings_logo"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/settings_desc"
@@ -38,21 +47,22 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="7dp"
-            android:text="Modify bank account, view profile\ninformation"
-            android:fontFamily="@font/interregular"
+            android:fontFamily="@font/montserratregular"
             android:textColor="#8B8B8B"
             android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/settings_logo"
-            app:layout_constraintTop_toBottomOf="@+id/settings_name"/>
+            app:layout_constraintTop_toBottomOf="@+id/settings_name"
+            app:layout_constraintVertical_bias="0.0"
+            tools:text="Modify bank account, view profile\ninformation" />
 
         <ImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:src="@drawable/arrow_right"
-            app:layout_constraintStart_toEndOf="@id/settings_desc"
-            android:layout_marginStart="70dp"
-            app:layout_constraintTop_toTopOf="@+id/settings_desc"
-            app:layout_constraintBottom_toBottomOf="@+id/settings_desc"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
