--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="description">#D9D9D9</color>
     <color name="desc">#A7A7A7</color>
     <color name="red">#F66F23</color>
+    <color name="settings">#A2A2A2</color>
 </resources>
